# ml-digits

./: .gitignore  README.md
model/: nb.ipynb  nb_tracking.ipynb  pyproject.toml
