[project]
name = "ml-digits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "onnx>=1.21.0",
    "onnxruntime>=1.24.4",
    "onnxscript>=0.6.2",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    # "triton-rocm>=3.6.0",
]


# [tool.uv.sources]
# torch = [{ index = "pytorch-rocm" }]
# torchvision = [{ index = "pytorch-rocm" }]
# triton-rocm = [{ index = "pytorch-rocm" }]


# [[tool.uv.index]]
# name = "pytorch-rocm"
# url = "https://download.pytorch.org/whl/rocm7.2"
# explicit = true
